ontopia-engine/src/test/resources/net/ontopia/testdata/ltm/error/reifytm-with-colon.ltm
#BASEURI "http://some.random.baseuri/base"
#TOPICMAP ~test:ltm1.3map
